--- a/index.html
+++ b/index.html
@@ -138,11 +138,9 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/profile1.png" width="560" height="540" alt="Nart" class="w-100"
-              data-reveal="top">
-
-            
-          </figure>
+            <img src="./assets/images/logo/profile1.png" alt="Nart" class="w-100" data-reveal="top">
+        </figure>
+        
 
           <div class="hero-content">
 
