--- a/index.html
+++ b/index.html
@@ -763,7 +763,9 @@ Developed communication skills through sales and customer interactions.
                   <h3 class="h3 card-title">Chat App</h3>
 
                   <p class="card-text">
-                    A chat app that features essential functionalities like user authentication with login and register capabilities. Once authenticated, users can engage in real-time chatting with others, enabling communication and connection between individuals within the app.
+                    A chat app that features essential functionalities like user authentication with login and register capabilities. O
+                    nce authenticated, users can engage in real-time chatting with others, enabling communication and connection between
+                     individuals within the app.
 
 
                   </p>
@@ -798,9 +800,10 @@ Developed communication skills through sales and customer interactions.
                   <h3 class="h3 card-title">Unit Conversion</h3>
 
                   <p class="card-text">
-                    I designed and implemented a unit converter feature for a Math application, I made a feature for the app that lets users change units easily. I used Flutter, which is something I’m good at, to make the feature smooth and user-friendly.
+                    I designed and implemented a unit converter feature for a Math application, 
+                    I made a feature for the app that lets users change units easily. I used Flutter, which is something I’m good at, to make the feature smooth and user-friendly.
                     
-                    <br>Note: This project is not publicly accessible but can be discussed further upon request. 
+                    Note: This project is not publicly accessible but can be discussed further upon request. 
                   </p>
 
 
@@ -828,7 +831,8 @@ Developed communication skills through sales and customer interactions.
 
                   <p class="card-text">
                     The Sports Shop Website is a simple web application showcasing football shirts.
-                    The app provides information on various football shirts available for purchase. 
+                    The app provides information on various football shirts and other products available for purchase. 
+                    This is a simple projects I made with a client. 
 
                   </p>
 
